# powerpi

./: .dockerignore  .eslintignore  .eslintrc  .gitignore  .prettierignore  .pylintrc  PowerPi.code-workspace  README.md  RELEASE.md  docker-compose.yml  go.work  go.work.sum  index.yaml  package.json  powerpi.json  register.mjs  requirements.txt  setup.py  tsconfig.json
common/pytest/: Pipfile  README.md  pyproject.toml  setup.py
common/pytest/powerpi_common_test/: base.py  device.py  mqtt.py  sensor.py
common/pytest/powerpi_common_test/device/: __init__.py  additional_state.py  base.py  device.py
common/pytest/powerpi_common_test/fixture/: __init__.py  common.py  device.py  mqtt.py  variable.py
common/pytest/powerpi_common_test/mqtt/: __init__.py  mqtt.py
common/pytest/powerpi_common_test/sensor/: __init__.py  sensor.py
common/pytest/powerpi_common_test/util/: __init__.py  subset_matcher.py
common/pytest/powerpi_common_test/variable/: __init__.py  variable.py
common/python/: .gitignore  Pipfile  README.md  config.py  device.py  pyproject.toml  requirements.txt  setup.py
common/python/powerpi_common/: application.py  config.py  container.py  controller.py  health.sh  logger.py  startup.py  typing.py
common/python/powerpi_common/condition/: __init__.py  container.py  errors.py  lexeme.py  parser.py  visitor.py
common/python/powerpi_common/config/: __init__.py  config.py  config_retriever.py  controller_config.py
common/python/powerpi_common/device/: __init__.py  additional_state.py  async_device.py  base.py  container.py  device.py  factory.py  geofence.py  manager.py  scene_state.py  status.py  threaded_device.py  type.py  types.py
common/python/powerpi_common/event/: action.py  consumer.py  handler.py  manager.py
common/python/powerpi_common/health/: __init__.py  health.py
common/python/powerpi_common/mqtt/: __init__.py  client.py  consumer.py  device_state_event_consumer.py  power_event_consumer.py  status_event_consumer.py  types.py
common/python/powerpi_common/sensor/: __init__.py  container.py  factory.py  initial_status_event_consumer.py  manager.py  sensor.py  types.py
common/python/powerpi_common/util/: __init__.py  data.py  metadata.py
common/python/powerpi_common/variable/: __init__.py  container.py  device.py  geofence.py  manager.py  presence.py  sensor.py  types.py  variable.py
common/python/src/: config.py  container.py  device.py  logger.py
common/python/src/mqtt/: __init__.py  client.py  consumer.py  device_state_event_consumer.py  power_event_consumer.py  status_event_consumer.py
common/python/tests/: conftest.py
common/python/tests/condition/: test_parser.py  test_visitor.py
common/python/tests/device/: test_additional_state.py  test_async_device.py  test_base.py  test_device.py  test_factory.py  test_geofence.py  test_manager.py  test_scene_state.py  test_status.py  test_threaded_device.py
common/python/tests/event/: test_action.py  test_consumer.py  test_handler.py  test_manager.py
common/python/tests/health/: test_health.py
common/python/tests/sensor/: test_sensor.py
controllers/energenie/: Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt
controllers/energenie/energenie_controller/: __main__.py  __version.py  __version__.py  config.py  container.py  controller.py
controllers/energenie/src/: common  container.py  main.py
controllers/energenie/tests/: conftest.py
controllers/harmony/: Dockerfile  Pipfile  README.md  pyproject.toml
controllers/harmony/harmony_controller/: __main__.py  __version.py  __version__.py  container.py
controllers/harmony/tests/: conftest.py
controllers/lifx/: Dockerfile  Pipfile  README.md  pyproject.toml
controllers/lifx/lifx_controller/: __main__.py  __version.py  __version__.py  container.py
controllers/lifx/tests/: conftest.py
controllers/macro/: Dockerfile  Pipfile  README.md  pyproject.toml
controllers/macro/macro_controller/: __main__.py  __version.py  __version__.py  container.py
controllers/network/: Dockerfile  README.md  pyproject.toml
controllers/network/network_controller/: __main__.py  config.py  container.py  controller.py
controllers/network/tests/: conftest.py
controllers/node/: Dockerfile  README.md  pyproject.toml
controllers/node/node_controller/: __main__.py  config.py  container.py
controllers/snapcast/: Dockerfile  README.md  pyproject.toml
controllers/snapcast/snapcast_controller/: __main__.py  container.py
controllers/snapcast/tests/: conftest.py
controllers/virtual/: Dockerfile  README.md  pyproject.toml
controllers/virtual/tests/: conftest.py
controllers/virtual/virtual_controller/: __main__.py  container.py
controllers/zigbee/: Dockerfile  Pipfile  README.md  pyproject.toml
controllers/zigbee/tests/: conftest.py  test_config.py
controllers/zigbee/zigbee_controller/: __main__.py  __version.py  __version__.py  config.py  container.py  controller.py
esp8266/: .gitignore  Makefile.in  README.md  circuit.cddx  config.h.in  configure.ac
esp8266/circuit/: circuit.cddx
esp8266/motion/: Makefile  motion.h  motion.ino
esp8266/src/: button.h  button.ino  clacks.h  clacks.ino  config.h.in  dht22.h  dht22.ino  mqtt.h  mqtt.ino  pir.h  pir.ino  powerpi-config.h  powerpi-sensor.h  powerpi-sensor.ino  powerpi.h  powerpi.ino  sensors.h  sensors.ino  wifi.h  wifi.ino
esp8266/temp/: Makefile  temp.ino
sensors/: .gitignore  Makefile.in  README.md  configure.ac
sensors/circuit/: circuit.cddx
sensors/powerpi-sensor/: cert.h.in  mqtt.h  mqtt.ino  pir.ino  powerpi-config.ino  wifi.h
sensors/src/: cert.h.in  config.h.in  mqtt.h  mqtt.ino  pir.h  powerpi-config.ino  powerpi-sensor.h  wifi.ino
services/event/: Dockerfile  README.md  pyproject.toml
services/event/event/: __main__.py  application.py  config.py  container.py
services/event/event/services/: action.py  (+4 more)
services/event/tests/: conftest.py  test_config.py
services/scheduler/: Dockerfile  README.md  pyproject.toml
services/scheduler/scheduler/: __main__.py  application.py  config.py  container.py
services/scheduler/tests/: conftest.py
(+2304 files in other folders)
