[project]
name = "powerpi-common-test"
version = "0.6.1"
description = "PowerPi Common Python Test Library"
license = "GPL-3.0-only"
authors = [
    {name = "TWilkin", email = "TWilkin@users.noreply.github.com"}
]
repository = "https://github.com/TWilkin/powerpi.git"

requires-python = "^3.11"
dependencies = [
    "pytest (~=7.4.2)",
    "pytest-asyncio (~=0.21.1)",
    "pytest-cov (~=4.1.0)",
    "pytest-mock (~=3.11.1)"
]

[tool.poetry]
requires-poetry = ">=2.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
