[project]
name = "powerpi-common-test"
version = "0.7.0"
description = "PowerPi Common Python Test Library"
license = "GPL-3.0-only"
authors = [
    {name = "TWilkin", email = "TWilkin@users.noreply.github.com"}
]
repository = "https://github.com/TWilkin/powerpi.git"

requires-python = ">=3.11,<4.0"
dependencies = [
    "pytest (~=9.0.3)",
    "pytest-asyncio (~=1.3.0)",
    "pytest-cov (~=7.1.0)",
    "pytest-mock (~=3.15.1)"
]

[tool.poetry]
requires-poetry = ">=2.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
