[project]
name = "powerpi-common"
version = "0.7.4"
description = "PowerPi Common Python Library"
license = "GPL-3.0-only"
authors = [
    {name = "TWilkin", email = "TWilkin@users.noreply.github.com"}
]
repository = "https://github.com/TWilkin/powerpi.git"
include = ["powerpi_common/health.sh"]

requires-python = ">=3.11"
dependencies = [
    "apscheduler (==3.11.0)",
    "dependency-injector (~=4.46.0)",
    "gmqtt (~=0.7.0)",
    "toml (~=0.10.2)"
]

[tool.poetry.group.test.dependencies]
powerpi-common-test = {path = "../pytest", develop = true}

[tool.poetry]
requires-poetry = ">=2.0"

[tool.pytest.ini_options]
addopts = "-v --cov=powerpi_common"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
