[tool.poetry]
name = "energenie_controller"
version = "0.1.8"
description = "PowerPi Engergenie Controller"
license = "GPL-3.0-only"
authors = ["TWilkin <4322355+TWilkin@users.noreply.github.com>"]
repository = "https://github.com/TWilkin/powerpi.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
energenie = "~=1.0.1"
powerpi-common = {path = "../../common/python", develop = true}
pyenergenie = {git = "https://github.com/whaleygeek/pyenergenie.git", rev = "eec562c140dd34027b3184d81f549c9d4a65f5db"}

[tool.poetry.dev-dependencies]
autopep8 = "~=1.6.0"
powerpi-common-test = {path = "../../common/pytest", develop = true}
pylint = "~=2.12.2"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"

[tool.pytest.ini_options]
addopts = "-v --cov=energenie_controller"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
