[tool.poetry]
name = "energenie_controller"
version = "0.2.3"
description = "PowerPi Engergenie Controller"
license = "GPL-3.0-only"
authors = ["TWilkin <4322355+TWilkin@users.noreply.github.com>"]
repository = "https://github.com/TWilkin/powerpi.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
energenie = "~=1.0.1"
pyenergenie = {git = "https://github.com/whaleygeek/pyenergenie.git", rev = "eec562c140dd34027b3184d81f549c9d4a65f5db"}

[tool.poetry.group.powerpi.dependencies]
powerpi-common = {path = "../../common/python", develop = true}

[tool.poetry.group.dev.dependencies]
autopep8 = "~=2.0.2"
pylint = "~=2.17.4"

[tool.poetry.group.test.dependencies]
powerpi-common-test = {path = "../../common/pytest", develop = true}

[tool.pytest.ini_options]
addopts = "-v --cov=energenie_controller"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
