[tool.poetry]
name = "energenie_controller"
version = "0.4.0"
description = "PowerPi Energenie Controller"
license = "GPL-3.0-only"
authors = ["TWilkin <4322355+TWilkin@users.noreply.github.com>"]
repository = "https://github.com/TWilkin/powerpi.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gpiozero = "~=2.0.1"
pyenergenie = {git = "https://github.com/TWilkin/pyenergenie.git", branch = "gpiozero", rev = "9f0c048699f08719db08695e7dc2e51b33e6ad0f"}

[tool.poetry.group.powerpi.dependencies]
powerpi-common = {path = "../../common/python", develop = true}

[tool.poetry.group.test.dependencies]
powerpi-common-test = {path = "../../common/pytest", develop = true}

[tool.pytest.ini_options]
addopts = "-v --cov=energenie_controller"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
