[tool.poetry]
name = "harmony_controller"
version = "0.2.0"
description = "PowerPi Logitech Harmony Controller"
license = "GPL-3.0-only"
authors = ["TWilkin <4322355+TWilkin@users.noreply.github.com>"]
repository = "https://github.com/TWilkin/powerpi.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aioharmony = "~=0.2.9"
async-cache = "~=1.1.1"
asyncio-atexit = "~=1.0.1"
lazy = "~=1.4"

[tool.poetry.group.powerpi.dependencies]
powerpi-common = {path = "../../common/python", develop = true}

[tool.poetry.group.dev.dependencies]
autopep8 = "~=2.0.0"
pylint = "~=2.15.5"

[tool.poetry.group.test.dependencies]
powerpi-common-test = {path = "../../common/pytest", develop = true}

[tool.pytest.ini_options]
addopts = "-v --cov=harmony_controller"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
