[project]
name = "harmony_controller"
version = "0.4.9"
description = "PowerPi Logitech Harmony Controller"
license = "GPL-3.0-only"
authors = [
    {name = "TWilkin", email = "TWilkin@users.noreply.github.com"}
]
repository = "https://github.com/TWilkin/powerpi.git"
readme = "README.md"

requires-python = ">=3.11,<4.0"
dependencies = [
    "aioharmony (~=0.4.1)",
    "async-cache (~=1.1.1)",
    "asyncio-atexit (~=1.0.1)",
    "lazy (~=1.6)"
]

[tool.poetry.group.powerpi.dependencies]
powerpi-common = {path = "../../common/python", develop = true}

[tool.poetry.group.test.dependencies]
powerpi-common-test = {path = "../../common/pytest", develop = true}

[tool.poetry]
requires-poetry = ">=2.0"

[tool.pytest.ini_options]
addopts = "-v --cov=harmony_controller"
markers = ["first"]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
