[project]
name = "lifx_controller"
version = "0.6.5"
description = "PowerPi LIFX Controller"
license = "GPL-3.0-only"
authors = [
    {name = "TWilkin", email = "TWilkin@users.noreply.github.com"}
]
repository = "https://github.com/TWilkin/powerpi.git"
readme = "README.md"

requires-python = ">=3.11,<4.0"
dependencies = [
    "aiolifx (~=1.1.3)"
]

[tool.poetry.group.powerpi.dependencies]
powerpi-common = {path = "../../common/python", develop = true}

[tool.poetry.group.test.dependencies]
powerpi-common-test = {path = "../../common/pytest", develop = true}

[tool.poetry]
requires-poetry = ">=2.0"

[tool.pytest.ini_options]
addopts = "-v --cov=lifx_controller"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
