[tool.poetry]
name = "macro_controller"
version = "1.1.4"
description = "PowerPi Macro Controller"
authors = ["TWilkin <4322355+TWilkin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
powerpi-common = {path = "../../common/python", develop = true}

[tool.poetry.dev-dependencies]
autopep8 = "~=1.6.0"
powerpi-common-test = {path = "../../common/pytest", develop = true}
pylint = "~=2.12.2"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"

[tool.pytest.ini_options]
addopts = "-v --cov=macro_controller"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
