[tool.poetry]
name = "node_controller"
version = "0.0.1"
description = "PowerPi Node Controller"
license = "GPL-3.0-only"
authors = ["TWilkin <4322355+TWilkin@users.noreply.github.com>"]
repository = "https://github.com/TWilkin/powerpi.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
icmplib = "^3.0.3"
pijuice-base = {git = "https://github.com/PiSupply/PiJuice.git", rev = "1e1049de39800862079a309d94133fe5d8e9a856", subdirectory = "Software/Source"}
rpi-gpio = "^0.7.1"
smbus = "^1.1.post2"
aiofiles = "^22.1.0"

[tool.poetry.group.powerpi.dependencies]
powerpi-common = {path = "../../common/python", develop = true}

[tool.poetry.group.dev.dependencies]
autopep8 = "~=2.0.0"
pylint = "~=2.15.5"

[tool.poetry.group.test.dependencies]
powerpi-common-test = {path = "../../common/pytest", develop = true}

[tool.pytest.ini_options]
addopts = "-v --cov=node_controller"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
