[tool.poetry]
name = "zigbee_controller"
version = "0.4.4"
description = "PowerPi ZigBee Controller"
license = "GPL-3.0-only"
authors = ["TWilkin <4322355+TWilkin@users.noreply.github.com>"]
repository = "https://github.com/TWilkin/powerpi.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "==41.0.3" # while piwheels doesn't have a later version
rpds-py = "==0.7.1" # while piwheels doesn't have a later version
zigpy = "~=0.56.4"
zigpy-znp = "~=0.11.4"

[tool.poetry.group.powerpi.dependencies]
powerpi-common = {path = "../../common/python", develop = true}

[tool.poetry.group.test.dependencies]
powerpi-common-test = {path = "../../common/pytest", develop = true}

[tool.pytest.ini_options]
addopts = "-v --cov=zigbee_controller"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
