[tool.poetry]
name = "event"
version = "0.0.1"
description = "PowerPi Event Service"
license = "GPL-3.0-only"
authors = ["TWilkin <4322355+TWilkin@users.noreply.github.com>"]
repository = "https://github.com/TWilkin/powerpi.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jsonpatch = "~=1.33"

[tool.poetry.group.powerpi.dependencies]
powerpi-common = {path = "../../common/python", develop = true}

[tool.poetry.group.test.dependencies]
powerpi-common-test = {path = "../../common/pytest", develop = true}

[tool.pytest.ini_options]
addopts = "-v --cov=event"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
