[project]
name = "scheduler"
version = "1.5.0"
description = "PowerPi Scheduler Service"
license = "GPL-3.0-only"
authors = [
    {name = "TWilkin", email = "TWilkin@users.noreply.github.com"}
]
repository = "https://github.com/TWilkin/powerpi.git"
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "cron-converter (~=1.2.1)",
    "cron-descriptor (~=1.4.5)",
]

[tool.poetry.group.powerpi.dependencies]
powerpi-common = {path = "../../common/python", develop = true}

[tool.poetry.group.test.dependencies]
powerpi-common-test = {path = "../../common/pytest", develop = true}

[tool.poetry]
requires-poetry = ">=2.0"

[tool.pytest.ini_options]
addopts = "-v --cov=scheduler"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
